# repo-pilot

./: .gitignore  GitHub Stash.spec  GitHubStash.spec  README.md  RepoPilot.md  main.py  package-lock.json  package.json  pyi_stderr.txt  pyproject.toml  reasonix.toml
apps/desktop/: README.md
apps/web/: .env.development  .gitignore  README.md  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
archive/: GitHub Stash.spec  GitHubStash.spec  README-archive.md  bug_analysis.md  main.py
archive/backend/: github_api.py  server.py  store.py
archive/data/: stash_data.json  stash_settings.json  stash_users.json
archive/frontend/: app.js  github_sync.js  graph.html  index.html  login.js  style.css
backend/: config.py  database.py  path_util.py  server.py
backend/api/: deps.py  github.py
backend/core/: exceptions.py  middleware.py  security.py
backend/models/: agent.py  category.py  project.py  user.py
backend/schemas/: agent.py  note.py  user.py
backend/tools/: __init__.py
data/: stash_data.json
docs/: README.md
docs/architecture/: OVERVIEW.md  PATH_MAPPING.md  REPO_LAYOUT.md
docs/product/: README.md
frontend/: app.js  graph.html  index.html  login.js  package.json  settings.js  style.css  vite.config.ts
scripts/: _debug_mentor_empty.py  dev.ps1
services/agent/: README.md  pyproject.toml
services/agent/agent_runtime/: __init__.py  main.py
services/mcp/: README.md  pyproject.toml
services/mcp/mcp_server/: __init__.py
test/: README.md  conftest.py  pytest.ini
tests/: README.md  pytest.ini
(+463 files in other folders)
