[project]
name = "repopilot-agent"
version = "0.1.0"
description = "RepoPilot Agent 运行时 — Hub / Scout / Mentor 等（规划中）"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_runtime"]
